# acoustic-beacon-optimiser

./: .gitignore  CITATION.cff  CLAUDE.md  LICENCE  LLM.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  reproducibility.yml
docs/: API.md  RESEARCH.md  SPEC.md  holderied-data-request.md
notebooks/: 01_sphere_validation.ipynb  02_marcgravia_reconstruction.ipynb  03_shape_optimisation.ipynb  04_pareto_analysis.ipynb
paper/: main.tex  references.bib
src/abo/: __init__.py  cli.py
src/abo/acoustics/: __init__.py  bem_solver.py  objectives.py  target_strength.py
src/abo/biology/: __init__.py  call_spectra.py  detection_model.py  natural_shapes.py
src/abo/geometry/: __init__.py  meshing.py  profiles.py  reflectors.py
src/abo/optimisation/: __init__.py  constraints.py  encoding.py  multi_objective.py  runners.py  single_objective.py
src/abo/visualisation/: __init__.py  mesh_plots.py  pareto_plots.py  spectral_plots.py
tests/: conftest.py
tests/analytical/: mie_series.py
tests/integration/: test_simon_2020.py  test_sphere_scattering.py
tests/unit/: test_bem_solver.py  test_call_spectra.py  test_meshing.py  test_objectives.py  test_optimisation.py  test_reflectors.py  test_runners.py  test_spectral_plots.py
