[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "acoustic-beacon-optimiser"
version = "0.1.0"
description = "BEM solver and shape optimiser for bat-pollinated floral acoustic reflectors"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Ant Newman" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "bempp-cl>=0.4.2",
    "click>=8.0",
    "gmsh>=4.12",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "cma>=4.0",
    "pymoo>=0.6",
    "pyvista>=0.43",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0",
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
abo = "abo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "bempp.*",
    "gmsh.*",
    "pyvista.*",
    "cma.*",
    "pymoo.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring BEM solver",
]
